# seed

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/seed-bridge/: Cargo.toml
crates/seed-bridge/src/: main.rs
crates/seed-bridge/tests/: smoke.rs
crates/seed-core/: Cargo.toml
crates/seed-core/src/: config.rs  domain.rs  events.rs  glyph.rs  levels.rs  lib.rs  paths.rs  state.rs
crates/seed-core/tests/: config.rs  events.rs  glyph.rs  glyph_golden.txt  levels.rs  seed_home_env_override.rs
crates/seed-daemon/: Cargo.toml
crates/seed-daemon/src/: daemon.rs  event_log.rs  ipc.rs  lib.rs  main.rs  notify.rs  schedule.rs  wire.rs
crates/seed-daemon/tests/: smoke.rs
crates/seed-tui/: Cargo.toml
crates/seed-tui/src/: app.rs  client.rs  command.rs  init.rs  input.rs  lib.rs  logcmd.rs  main.rs  palette.rs  prestige.rs  term.rs
crates/seed-tui/src/view/: command_bar.rs  mod.rs  orbit.rs  prestige_modal.rs  side_panel.rs  skill_detail.rs  status_bar.rs  title_bar.rs  toast.rs  tweaks.rs
crates/seed-tui/tests/: client.rs
crates/seed-wire/: Cargo.toml
crates/seed-wire/src/: lib.rs
docs/: CNAME  claude.html  index.html  readme.html
docs/00-index/: adr.html  backlog.kanban.html  concepts.html  guides.html  notes.html  prs.html  references.html  specs.html
docs/01-concepts/: concepts.html
docs/02-references/: cli-flags.html  events-schema.html  references.html
docs/03-guides/: cargo-cheatsheet.html  guides.html
docs/04-architecture/: architecture.html
docs/04-architecture/adr/: adr.html
docs/05-notes/: build-log-01-workspace-bootstrap.html  build-log-02a-seed-core-foundation.html  build-log-02b-glyph-renderer.html  build-log-03-seed-daemon.html  build-log-04-seed-tui.html  build-log-05-docs-and-smoke.html  build-log-06-xp-calibration.html  build-log-06b-redline-fixes.html  notes.html
docs/07-stories/: stories.html
docs/08-specs/: glyph-expansion.html  overdue-rollover.html  prestige-focus.html  prestige-integrate.html  specs.html  v0-1-0-punch-list.html  xp-pacing.html
docs/09-milestones/: milestones.html  v0-mvp.html
docs/10-prs/: prs.html
docs/site-lib/: metadata.json  rss.xml  search-index.json
docs/site-lib/html/: file-tree-content.html
docs/site-lib/styles/: snippets.css
seed - docs/: CLAUDE.md  CNAME  README.md  index.md
seed - docs/.obsidian/: appearance.json  community-plugins.json  core-plugins.json  graph.json
seed - docs/.obsidian/snippets/: Colored Sidebar Items.css
seed - docs/00 index/: ADR.base  BACKLOG.kanban.md  CONCEPTS.base  GUIDES.base  NOTES.base  PRS.base  REFERENCES.base  SPECS.base
seed - docs/01 concepts/: CONCEPTS.md
seed - docs/02 references/: REFERENCES.md  cli-flags.md  events-schema.md
seed - docs/03 guides/: GUIDES.md  cargo-cheatsheet.md
seed - docs/04 architecture/: ARCHITECTURE.md
seed - docs/04 architecture/adr/: ADR.md
seed - docs/05 notes/: NOTES.md  build-log-01-workspace-bootstrap.md  build-log-02a-seed-core-foundation.md  build-log-02b-glyph-renderer.md  build-log-03-seed-daemon.md  build-log-04-seed-tui.md  build-log-05-docs-and-smoke.md  build-log-06-xp-calibration.md  build-log-06b-redline-fixes.md
seed - docs/07 stories/: STORIES.md
seed - docs/08 specs/: SPECS.md  glyph-expansion.md  overdue-rollover.md  presence-grace.md  prestige-focus.md  prestige-integrate.md  replay-fidelity.md  v0-1-0-punch-list.md  xp-pacing.md
seed - docs/09 milestones/: MILESTONES.md  v0-mvp.md
seed - docs/10 PRs/: PRS.md
(+6 files in other folders)
