[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Joseph <jmad1112x@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dirs = "6"
interprocess = { version = "2", features = ["tokio"] }
notify-rust = "4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "net", "io-util", "signal"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.1"

# dev-dependencies
tempfile = "3"
pretty_assertions = "1"
