[package]
name = "seed-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "seed"
path = "src/main.rs"

[lib]
name = "seed_tui_testlib"
path = "src/lib.rs"

[dependencies]
seed-core = { path = "../seed-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
tokio.workspace = true
interprocess.workspace = true
ratatui.workspace = true
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width.workspace = true
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
